# OpenGL-Note

./: CMakeLists.txt  README.md
cpp/: glad.c
cpp/opengl_code/: gl_coordinate_system.cpp  gl_draw_square.cpp  gl_draw_triangles.cpp  gl_shader_green_triangle.cpp  gl_texture_box.cpp  gl_texture_box_face.cpp  gl_transform_rotate.cpp  gl_window.cpp  shader_class_usage.cpp
cpp/util/: shader_util.h  stb_image.cpp
shader/: 4.1.texture.fs  6.3.coordinate_systems.vs
